# mtg-builder

./: .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  main.py  pyproject.toml
backend/app/controllers/: __init__.py  auth.py  card.py  deck.py  game.py  health.py  mana_utils.py
backend/app/models/: __init__.py  card.py  dbmodels.py  deck.py  deck_card.py  game.py  user.py
backend/app/routers/: __init__.py  auth.py  card.py  deck.py  game.py  health.py
backend/app/routes/: auth.py  decks.py  name.py  search.py
backend/app/views/: __init__.py  card.py  deck.py  game.py  health.py  user.py
backend/crates/database/: Cargo.toml
backend/crates/database/migrations/: 001_initial.sql
backend/crates/database/src/: config.rs  error.rs  lib.rs  pool.rs
backend/crates/database/src/repositories/: card.rs  deck.rs  mod.rs
backend/migrations/: 001_users_and_decks.sql  002_reset_users_and_decks.sql  run_migrations.py
backend/models/: dbmodels.py
backend/routes/: health.py  name.py  search.py
backend/src/: main.rs
backend/src/mtg_builder_api/: main.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  cardUtils.ts  deckTxt.ts  deckValidation.ts  types.ts  wsClient.ts
frontend/src/stores/: authStore.ts  deckStore.js  deckStore.ts  gameStore.ts  multiplayerStore.ts
scripts/: .env.example  Cargo.toml  Dockerfile  cards.db
scripts/src/: client.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  validator.rs
scripts/tests/: validator_tests.rs
typings/asyncpg/: compat.pyi  connect_utils.pyi  connection.pyi  introspection.pyi  pool.pyi  prepared_stmt.pyi  types.pyi
typings/asyncpg/pgproto/: pgproto.pyi  (+1 more)
(+30 files in other folders)
