[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[lib]
name = "scripts"
path = "src/lib.rs"

[[bin]]
name = "scripts"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
urlencoding = "2"
